feat(user): allow user to get and update profile ✨
- Allow to authenticated and active user to recovery his profile data.
- Allow to authenticated and active user to update his profile data.
