# src/Infrastructure/Framework/Laravel/Persistence/User.php
@@ -67,7 +67,6 @@ class User extends Authenticatable implements JWTSubject
     {
         return [
             'email_verified_at' => 'datetime',
-            'password' => 'hashed',
         ];
     }
 
